RESOLVED FIXED157038
Check to make sure shouldRequestCandidates() before requesting candidates
https://bugs.webkit.org/show_bug.cgi?id=157038
Summary Check to make sure shouldRequestCandidates() before requesting candidates
Beth Dakin
Reported 2016-04-26 11:52:30 PDT
Check to make sure shouldRequestCandidates() before requesting candidates
Attachments
Patch (9.95 KB, patch)
2016-04-26 11:57 PDT, Beth Dakin
thorton: review+
Beth Dakin
Comment 1 2016-04-26 11:57:21 PDT
WebKit Commit Bot
Comment 2 2016-04-26 11:59:52 PDT
Attachment 277403 [details] did not pass style-queue: ERROR: Source/WebKit2/UIProcess/Cocoa/WebViewImpl.mm:2172: Place brace on its own line for function definitions. [whitespace/braces] [4] ERROR: Source/WebKit/mac/WebCoreSupport/WebEditorClient.mm:1164: Place brace on its own line for function definitions. [whitespace/braces] [4] Total errors found: 2 in 8 files If any of these errors are false positives, please file a bug against check-webkit-style.
Beth Dakin
Comment 3 2016-04-26 13:09:26 PDT
Note You need to log in before you can comment on or make changes to this bug.