Source/WebKit/mac/WebView/WebViewInternal.h
@@ -298,4 +298,5 @@ OBJC_CLASS NSTextAlternatives;
 @interface WebView (WebUpdateWebViewAdditions)
 - (void)updateWebViewAdditions;
 - (void)showCandidates:(NSArray *)candidates forString:(NSString *)string inRect:(NSRect)rectOfTypedString forSelectedRange:(NSRange)range view:(NSView *)view completionHandler:(void (^)(NSTextCheckingResult *acceptedCandidate))completionBlock;
+- (BOOL)shouldRequestCandidates;
 @end
